# web-identity-description

./: Dockerfile  RELEASE_NOTES.md  Tiltfile  catalog-info.yaml  kubernetes.yaml  pyproject.toml  requirements.txt
app/: main.py
app/src/: Fingerprint.py  UserAgent.py
app/static/css/: identity-card.css
app/static/js/: clipboard.js  cookie.js
app/templates/: id.html.j2
