[tool.poetry]
name = "digital-identity-check"
version = "0.1.0"
description = ""
authors = ["Maxime Sibellas <maxime.sibellas@ekino.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.0.2"
ua-parser = "^0.10.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
